--- a/app/assets/stylesheets/_navigation.css.sass
+++ b/app/assets/stylesheets/_navigation.css.sass
@@ -4,19 +4,25 @@
     left: 2em
     top: -0.6em
   > nav
+    height: 3em
     > ul
+      float: right
       padding: 0
       margin: 0
 
       > li
         @include inline-block
-
+        float: left
         margin-right: 1em
+        @include transition(all 0.2s ease-in-out)
 
         a
           &:link, &:hover, &:active, &:visited
             color: white
             text-decoration: none
+
+        &:hover
+          margin: 5px calc(1em - 5px) 0 5px
 
 .nav-session
   > nav
